Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26008

Setting printer name initializes all properties for printer

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.2.1
    • 4.8.3, 5.2.0 RC1
    • GUI: Printing
    • None
    • Windows

      If QPrinter::setPrinterName() is called after orientation has been set, the orientation is initialized to default on Windows. On Linux the set orientation will be kept even after setting the printer name.

      The following code can be used to reproduce the issue:

      QPrinter pr;
      pr.setPageSize(QPrinter::A4);
      pr.setOrientation(QPrinter::Landscape);
      pr.setPrinterName(pn); // name of the used printer
      qDebug() <<  pr.orientation();
      

        For Gerrit Dashboard: QTBUG-26008
        # Subject Branch Project Status CR V

            johnlayt John Layt
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes